# docxcompose

./: .gitignore  pyproject.toml
docxcompose/: properties.py
