[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docxcompose"
version = "1.4.1.tsubasa"
description = "Compose .docx documents"
readme = "README.rst"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["Python", "DOCX", "Word", "OOXML"]
authors = [
    {name = "Thomas Buchberger", email = "t.buchberger@4teamwork.ch"}
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "lxml",
    "python-docx>=0.8.8",
    "six",
    "babel",
    "importlib-resources>=1.3; python_version<'3.9'",
]

[project.optional-dependencies]
test = [
    "pytest",
]
tests = [
    "pytest",
]

[project.urls]
Homepage = "https://github.com/4teamwork/docxcompose"
Repository = "https://github.com/4teamwork/docxcompose"

[project.scripts]
docxcompose = "docxcompose.command:main"

[tool.setuptools]
zip-safe = true

[tool.setuptools.packages.find]
exclude = ["ez_setup"]

[tool.setuptools.package-data]
docxcompose = ["templates/*.xml"]
